[package]
name = "rkbx_link"
version = "1.1.0"
edition = "2021"
authors = ["grufkork"]
repository = "https://github.com/grufkork/rkbx_link"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.10.1"
rusty_link = "0.4.2"
reqwest = {version = "0.12.7", features = ["blocking"]}
termcolor = "1.4.1"
binrw = "0.14.0"
rekordcrate = { git = "https://github.com/grufkork/rekordcrate.git", branch = "main" } # The fork publicizes some required fields
notify = "8.2.0"
sacn = "0.10"

[target.'cfg(windows)'.dependencies]
# toy-arms = {version = "0.9.4", features = ["external"]}
toy-arms = { git = "https://github.com/grufkork/toy-arms", branch = "0.9.4", features = ["external"] }
winapi = "0.3.9"

[target.'cfg(macos)'.dependencies]
sysinfo = "0.31"

[features]
dev = []
